--- a/config/train.yaml
+++ b/config/train.yaml
@@ -62,3 +62,7 @@ test_after_training: False
 
 # seed for random number generators in pytorch, numpy and python.random
 seed: 42
+
+hydra:
+  searchpath:
+    - ../additional_config
