--- a/config/callbacks/default.yaml
+++ b/config/callbacks/default.yaml
@@ -5,8 +5,9 @@ defaults:
   - model_summary.yaml
   - rich_progress_bar.yaml
   - write_h5_callback.yaml
-  - write_tiff_callback.yaml
+  # Include compute_wsi_metrics only if you are doing training and/or validation.
   - compute_wsi_metrics_callback.yaml # This needs to follow write_h5_callback as it requires the outputs
+  - write_tiff_callback.yaml
   - _self_
 
 learningrate_monitor:
@@ -40,4 +41,4 @@ write_tiff_callback:
 
 compute_wsi_metrics_callback:
   max_processes: 4
-  save_per_image: true
+  save_per_image: True
