1. Dlup now honors `slide_bounds` while computing `scaled_size` 2. Don't delete h5 files during compute metrics (no test).

--- a/config/callbacks/default.yaml
+++ b/config/callbacks/default.yaml
@@ -6,7 +6,7 @@ defaults:
   - rich_progress_bar.yaml
   - write_h5_callback.yaml
   # Include compute_wsi_metrics only if you are doing training and/or validation.
-  - compute_wsi_metrics_callback.yaml # This needs to follow write_h5_callback as it requires the outputs
+  #- compute_wsi_metrics_callback.yaml # This needs to follow write_h5_callback as it requires the outputs
   - write_tiff_callback.yaml
   - _self_
 
