--- a/config/inference.yaml
+++ b/config/inference.yaml
@@ -8,6 +8,7 @@ defaults:
   - pre_transform: ???
   - augmentations: ???
   - task: segmentation_inference.yaml
+  - inference_writers: default.yaml
   - logger: null
   - lit_module: ???
   - callbacks: inference.yaml
