--- a/config/train.yaml
+++ b/config/train.yaml
@@ -15,6 +15,7 @@ defaults:
     - mlflow
     - tensorboard
   - callbacks: default.yaml
+  - inference_writers: null
   - trainer: default.yaml
   - hydra: default.yaml  # if we want to setup different hydra logging dirs / color log
   - paths: default.yaml
