--- a/config/trainer/default.yaml
+++ b/config/trainer/default.yaml
@@ -7,7 +7,7 @@ num_nodes: 1
 
 # number of validation steps to execute at the beginning of the training
 num_sanity_val_steps: 0
-#log_every_n_steps: 2
+log_every_n_steps: 5
 
 # if a smaller grid is used, the val check interval should be smaller
 #val_check_interval: 2  # Used if you want to check val more than once per epoch
