--- a/config/lit_module/feature_extraction/ibot.yaml
+++ b/config/lit_module/feature_extraction/ibot.yaml
@@ -4,7 +4,7 @@ model:
   _target_: ahcore.models.feature_extractors.ibot_vit.iBOTViT
   architecture: "vit_base_pancan"
   encoder: "teacher"
-  weights_path: "/projects/foundational_models/reproduce_owkin_ibot/downloads/weights/ibot_vit_base_pancan.pth"
+  weights_path: null
 
 optimizer: null
 
