--- a/config/lit_module/feature_extraction/ibot.yaml
+++ b/config/lit_module/feature_extraction/ibot.yaml
@@ -1,10 +1,8 @@
 _target_: ahcore.lit_module.AhCoreLightningModule
 
 model:
-  _target_: ahcore.models.feature_extractors.ibot_vit.iBOTViT
-  architecture: "vit_base_pancan"
-  encoder: "teacher"
-  weights_path: null
+  _target_: ahcore.models.jit_model.AhcoreJitModel.from_jit_path
+  jit_path: ???
 
 optimizer: null
 
