--- a/config/callbacks/default.yaml
+++ b/config/callbacks/default.yaml
@@ -4,10 +4,9 @@ defaults:
   - early_stopping.yaml
   - model_summary.yaml
   - rich_progress_bar.yaml
-#  - writer_callback.yaml
   - write_h5_callback.yaml
   - write_tiff_callback.yaml
-#  - compute_wsi_metrics_callback.yaml # This needs to follow write_h5_callback as it requires the outputs
+  - compute_wsi_metrics_callback.yaml # This needs to follow write_h5_callback as it requires the outputs
   - _self_
 
 learningrate_monitor:
@@ -29,17 +28,7 @@ early_stopping:
 
 model_summary:
   max_depth: -1
-#
-#write_h5_callback:
-#  max_queue_size: 100
-#  max_concurrent_writers: 4
-#  normalization_type: "logits" # Make sure to use the appropriate normalization for your use case.
-#  precision: "float32" # Make sure to use the appropriate precision for your use case.
 
-#write_tiff_callback:
-#  max_concurrent_writers: 4
-#  colormap: ${data_description.color_map}
-#
-#compute_wsi_metrics_callback:
-#  max_processes: 4
-#  save_per_image: true
+compute_wsi_metrics_callback:
+  max_processes: 4
+  save_per_image: true
