--- a/.github/workflows/precommit_checks.yml
+++ b/.github/workflows/precommit_checks.yml
@@ -33,8 +33,8 @@ jobs:
                 cache: 'pip'
 
             # Install the required dependencies for local repos in the precommit hooks
-            - name: Install Dependencies
-              run: pip install -r .github/workflows/requirements.txt
+            - name: Install Dependencies from setup.py
+              run: pip install -e .[dev]
 
             # Determine which python files have changed in the PR.
             - name: Get Changed Files
