--- a/.github/workflows/precommit_checks.yml
+++ b/.github/workflows/precommit_checks.yml
@@ -29,12 +29,12 @@ jobs:
             - name: Setup Python Environment
               uses: actions/setup-python@v4
               with:
-                python-version: '3.10.13'
+                python-version: '3.11'
                 cache: 'pip'
 
             # Install the required dependencies for local repos in the precommit hooks
-            - name: Install Dependencies
-              run: pip install -r .github/workflows/requirements.txt
+            - name: Install Dependencies from setup.py
+              run: pip install -e .[dev]
 
             # Determine which python files have changed in the PR.
             - name: Get Changed Files
