--- a/config/callbacks/write_tiff_callback.yaml
+++ b/config/callbacks/write_tiff_callback.yaml
@@ -1,3 +1,6 @@
 write_tiff_callback:
   _target_: ahcore.callbacks.WriteTiffCallback
+  reader_class:
+    _target_: ahcore.writers.ZarrFileImageWriter
+    _partial_: true
   max_concurrent_writers: 2
