--- a/.mypy.ini
+++ b/.mypy.ini
@@ -4,6 +4,12 @@ plugins = numpy.typing.mypy_plugin
 [mypy-h5py.*]
 ignore_missing_imports = True
 
+[mypy-zarr.*]
+ignore_missing_imports = True
+
+[mypy-numcodecs.*]
+ignore_missing_imports = True
+
 [mypy-pytorch_lightning.*]
 ignore_missing_imports = True
 
