--- a/config/callbacks/write_file_callback.yaml
+++ b/config/callbacks/write_file_callback.yaml
@@ -5,4 +5,6 @@ write_file_callback:
   writer_class:
     _target_: ahcore.writers.ZarrFileImageWriter
     _partial_: true
+  callbacks:
+    - _target_: ahcore.callbacks.DummyCallback
   max_concurrent_queues: 3
