--- a/config/callbacks/write_file_callback.yaml
+++ b/config/callbacks/write_file_callback.yaml
@@ -6,5 +6,12 @@ write_file_callback:
     _target_: ahcore.writers.ZarrFileImageWriter
     _partial_: true
   callbacks:
-    - _target_: ahcore.callbacks.DummyCallback
+    - _target_: ahcore.callbacks.converters.TiffConverterCallback
+      reader_class:
+        _target_: ahcore.readers.ZarrFileImageReader
+        _partial_: true
+      max_concurrent_tasks: 3
+      colormap:
+        0: black
+        1: green
   max_concurrent_queues: 3
