--- a/config/callbacks/write_file_callback.yaml
+++ b/config/callbacks/write_file_callback.yaml
@@ -6,7 +6,7 @@ write_file_callback:
     _target_: ahcore.writers.ZarrFileImageWriter
     _partial_: true
   callbacks:
-    - _target_: ahcore.callbacks.converters.TiffConverterCallback
+    - _target_: ahcore.callbacks.converters.tiff_callback.TiffConverterCallback
       reader_class:
         _target_: ahcore.readers.ZarrFileImageReader
         _partial_: true
@@ -14,4 +14,8 @@ write_file_callback:
       colormap:
         0: black
         1: green
+    - _target_: ahcore.callbacks.converters.wsi_metric_callback.ComputeWsiMetricsCallback
+      reader_class:
+        _target_: ahcore.readers.ZarrFileImageReader
+        _partial_: true
   max_concurrent_queues: 3
