Reduced the mypy strict errors to 6.

--- a/config/inference.yaml
+++ b/config/inference.yaml
@@ -48,3 +48,6 @@ enforce_tags: False
 
 # seed for random number generators in pytorch, numpy and python.random
 seed: 42
+
+# Accuracy for matrix multiplication
+float32_matmul_precision: high
