Basic user managemant wrapper

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,6 +1,9 @@
 [mypy]
 plugins = numpy.typing.mypy_plugin
 
+[mypy-pymilvus.*]
+ignore_missing_imports = True
+
 [mypy-h5py.*]
 ignore_missing_imports = True
 
