AhcoreJitModel implements different forward functions based on output mode. (Fixes #81)

--- a/config/lit_module/jit_models/jit.yaml
+++ b/config/lit_module/jit_models/jit.yaml
@@ -3,6 +3,7 @@ _target_: ahcore.lit_module.AhCoreLightningModule
 model:
   _target_: ahcore.models.jit_model.AhcoreJitModel.from_jit_path
   jit_path: null
+  output_mode: "embed_concat"
 
 optimizer: null
 
