--- a/config/lit_module/jit_models/foundation_model.yaml
+++ b/config/lit_module/jit_models/foundation_model.yaml
@@ -1,11 +1,10 @@
 _target_: ahcore.lit_module.AhCoreLightningModule
 
 model:
-  _target_: ahcore.models.jit_model.FoundationModel.from_jit_path
+  _target_: ahcore.models.feature_extractors.DinoV2.from_jit_path
   jit_path: null
-  model_type: "Dino_v2"
-  # output mode can be one of "embed_cls_only", "embed_patch_only", "embed_concat" and "general_embedding"
-  output_mode: "embed_cls_only"
+  # output mode can be one of "embed_cls_only", "embed_patch_only", "embed_mean", "embed_concat_mean" and "embed_concat"
+  output_mode: "embed_patch_only"
 
 optimizer: null
 
