--- a/.mypy.ini
+++ b/.mypy.ini
@@ -34,6 +34,9 @@ ignore_missing_imports = True
 [mypy-cv2.*]
 ignore_missing_imports = True
 
+[mypy-pyvips.*]
+ignore_missing_imports = True
+
 ; shouldn't this be in types-Pillow?
 [mypy-PIL.*]
 ignore_missing_imports = True
