--- a/config/task/segmentation.yaml
+++ b/config/task/segmentation.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 
 defaults:
-  - override /pre_transform: segmentation.yaml
+  - override /pre_transform: ???
   - override /metrics: segmentation.yaml
   - override /losses: segmentation_ce.yaml
   # TODO: we could also consider specifying the lit_module here
