Update to dlup 0.5 (beta) and adding multiclass

--- a/config/task/segmentation_multiclass.yaml
+++ b/config/task/segmentation_multiclass.yaml
@@ -1,10 +1,10 @@
 # @package _global_
 
 defaults:
-  - override /pre_transform: segmentation.yaml
+  - override /pre_transform: segmentation_multiclass.yaml
   - override /metrics: segmentation.yaml
   - override /losses: segmentation_ce.yaml
   # TODO: we could also consider specifying the lit_module here
 
 task_name: ???
-multiclass: false
+multiclass: true
