--- a/config/pre_transform/segmentation_multiclass.yaml
+++ b/config/pre_transform/segmentation_multiclass.yaml
@@ -1,3 +1,3 @@
 _target_: ahcore.transforms.pre_transforms.PreTransformTaskFactory.for_segmentation
 _partial_: true
-one_hot_encode: false
+multiclass: true
