--- a/config/callbacks/write_file_callback.yaml
+++ b/config/callbacks/write_file_callback.yaml
@@ -18,4 +18,6 @@ write_file_callback:
       reader_class:
         _target_: ahcore.readers.ZarrFileImageReader
         _partial_: true
+      max_concurrent_tasks: 3
+      ignore_index: null
   max_concurrent_queues: 3
