--- a/config/lit_module/jit_models/dinov2_cls.yaml
+++ b/config/lit_module/jit_models/dinov2_cls.yaml
@@ -2,7 +2,7 @@ _target_: ahcore.lit_module.AhCoreLightningModule
 
 model:
   _target_: ahcore.models.jit_feature_extractors.DinoV2JitModel.from_jit_path
-  jit_path: null
+  jit_path: ${oc.env:DINOV2_JIT_PATH}
   # output mode can be one of "embed_cls_only", "embed_patch_only", "embed_mean", "embed_concat_mean" and "embed_concat"
   output_mode: "embed_cls_only"
   cls_only_model: True
