--- a/ahcore/utils/vector_database/config/main.yaml
+++ b/ahcore/utils/vector_database/config/main.yaml
@@ -2,7 +2,7 @@
 
 defaults:
   - _self_  
-  - data_setup: large_train.yaml
+  - data_setup: large_val.yaml
   - vector_lookup: multi_mean_kmeans5.yaml
 
   
