--- a/ahcore/utils/vector_database/config/vector_lookup/multi_mean_kmeans5.yaml
+++ b/ahcore/utils/vector_database/config/vector_lookup/multi_mean_kmeans5.yaml
@@ -1,10 +1,32 @@
-_target_: ahcore.utils.vector_database.vector_lookup.perform_vector_lookup_multi
-reduce_method: "kmeans5"
-search_radius: 0.65
+_target_: ahcore.utils.vector_database.vector_lookup.perform_vector_lookup
+reduce_method: "kmeans"
+annotated_search_kwargs: {k: 50}
+search_radius: 0.50
 annotated_region_overlap: 0.1
-min_count: 5
+min_count: 7
 limit_results: 15000
 range_filter: 1.
 force_recompute_annotated_vectors: false
 print_results: true
-plot_results: false
+plot_results: true
+# target_filenames: ["K102428.svs"]
+# target_filenames: ["K102489.svs"]
+target_filenames: [
+    "K101081.svs",
+    "K102428.svs",
+    "K102429.svs",
+    "K102439.svs",
+    "K102489.svs",
+    "K102490.svs",
+    "K102599.svs",
+    "K102672.svs",
+    "K104210.svs",
+    "K104309.svs",
+    "K105102.svs",
+    "K105883.svs",
+    "K106236.svs",
+    "K106469.svs",
+    "K107192.svs",
+    "K109373-1.svs",
+    "K109373-2.svs"
+]
