--- a/ahcore/utils/vector_database/config/vector_lookup/multi_mean_kmeans5_rerank.yaml
+++ b/ahcore/utils/vector_database/config/vector_lookup/multi_mean_kmeans5_rerank.yaml
@@ -1,5 +1,5 @@
-_target_: ahcore.utils.vector_database.vector_lookup.perform_vector_lookup_multi
-reduce_method: "mean_kmeans5"
+_target_: ahcore.utils.vector_database.vector_lookup.perform_vector_lookup
+reduce_method: "mean_kmeans"
 ranker:
   _target_: pymilvus.WeightedRanker
   weights: [0.7,0.3,0.3,0.3,0.3,0.3]
